TD-023 refactor exception handling: remove unused methods, suppress warnings, and simplify `IntegrationError` initialization